--- a/config/sync/core.entity_form_display.node.article.default.yml
+++ b/config/sync/core.entity_form_display.node.article.default.yml
@@ -79,7 +79,6 @@ third_party_settings:
     group_article_metadata:
       children:
         - group_list
-        - group_categorization
         - group_colophon
         - group_article_colophon
         - group_teaching_goals
@@ -88,7 +87,7 @@ third_party_settings:
       label: 'Artikel metadata'
       region: content
       parent_name: ''
-      weight: 7
+      weight: 8
       format_type: tabs
       format_settings:
         classes: ''
@@ -98,24 +97,21 @@ third_party_settings:
         width_breakpoint: 640
     group_categorization:
       children:
-        - field_class
-        - field_subject
-        - field_location
-        - field_season
-        - field_time
-        - field_article_months
+        - group_kategorier
       label: Kategorisering
       region: content
-      parent_name: group_article_metadata
-      weight: 22
-      format_type: tab
+      parent_name: ''
+      weight: 7
+      format_type: fieldset
       format_settings:
         classes: ''
         show_empty_fields: false
         id: ''
-        formatter: closed
         description: ''
         required_fields: true
+        formatter: closed
+        direction: vertical
+        width_breakpoint: 640
     group_colophon:
       children:
         - field_equipment
@@ -203,12 +199,102 @@ third_party_settings:
       label: Geolokation
       region: content
       parent_name: ''
-      weight: 16
+      weight: 18
       format_type: fieldset
       format_settings:
         classes: ''
         show_empty_fields: false
         id: ''
+        description: ''
+        required_fields: true
+    group_klasse:
+      children:
+        - field_class
+      label: Klasse
+      region: content
+      parent_name: group_kategorier
+      weight: 21
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+    group_fag:
+      children:
+        - field_subject
+      label: Fag
+      region: content
+      parent_name: group_kategorier
+      weight: 22
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+    group_sted:
+      children:
+        - field_location
+      label: Sted
+      region: content
+      parent_name: group_kategorier
+      weight: 23
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+    group_aarstid:
+      children:
+        - field_season
+      label: Årstid
+      region: content
+      parent_name: group_kategorier
+      weight: 24
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+    group_tid:
+      children:
+        - field_time
+      label: Tid
+      region: content
+      parent_name: group_kategorier
+      weight: 25
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        formatter: closed
+        description: ''
+        required_fields: true
+    group_maa:
+      children:
+        - field_article_months
+      label: Måneder
+      region: content
+      parent_name: group_kategorier
+      weight: 26
+      format_type: tab
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        formatter: closed
         description: ''
         required_fields: true
 _core:
@@ -230,7 +316,7 @@ content:
     third_party_settings: {  }
   created:
     type: datetime_timestamp
-    weight: 9
+    weight: 10
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -246,7 +332,7 @@ content:
     third_party_settings: {  }
   field_article_months:
     type: options_buttons
-    weight: 35
+    weight: 20
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -258,7 +344,7 @@ content:
     third_party_settings: {  }
   field_class:
     type: options_buttons
-    weight: 30
+    weight: 15
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -296,7 +382,7 @@ content:
     third_party_settings: {  }
   field_description:
     type: string_textarea
-    weight: 15
+    weight: 16
     region: content
     settings:
       rows: 3
@@ -312,7 +398,7 @@ content:
     third_party_settings: {  }
   field_factboxes:
     type: paragraphs_classic_asymmetric
-    weight: 32
+    weight: 17
     region: content
     settings:
       title: Faktaboks
@@ -324,7 +410,7 @@ content:
     third_party_settings: {  }
   field_files:
     type: file_generic
-    weight: 34
+    weight: 18
     region: content
     settings:
       progress_indicator: throbber
@@ -356,39 +442,39 @@ content:
     third_party_settings: {  }
   field_list_media:
     type: media_library_widget
-    weight: 14
+    weight: 15
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
   field_location:
     type: options_buttons
-    weight: 32
+    weight: 17
     region: content
     settings: {  }
     third_party_settings: {  }
   field_media_downloads:
     type: media_library_widget
-    weight: 33
+    weight: 17
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
   field_season:
     type: options_buttons
-    weight: 33
+    weight: 18
     region: content
     settings: {  }
     third_party_settings: {  }
   field_subject:
     type: options_buttons
-    weight: 31
+    weight: 16
     region: content
     settings: {  }
     third_party_settings: {  }
   field_teaching_goals:
     type: text_textarea
-    weight: 35
+    weight: 13
     region: content
     settings:
       rows: 5
@@ -396,7 +482,7 @@ content:
     third_party_settings: {  }
   field_time:
     type: options_buttons
-    weight: 34
+    weight: 19
     region: content
     settings: {  }
     third_party_settings: {  }
@@ -425,13 +511,13 @@ content:
     third_party_settings: {  }
   path:
     type: path
-    weight: 13
+    weight: 15
     region: content
     settings: {  }
     third_party_settings: {  }
   promote:
     type: boolean_checkbox
-    weight: 11
+    weight: 13
     region: content
     settings:
       display_label: true
@@ -444,14 +530,14 @@ content:
     third_party_settings: {  }
   status:
     type: boolean_checkbox
-    weight: 15
+    weight: 17
     region: content
     settings:
       display_label: true
     third_party_settings: {  }
   sticky:
     type: boolean_checkbox
-    weight: 12
+    weight: 14
     region: content
     settings:
       display_label: true
@@ -465,13 +551,13 @@ content:
       placeholder: ''
     third_party_settings: {  }
   translation:
-    weight: 10
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
   uid:
     type: entity_reference_autocomplete
-    weight: 8
+    weight: 9
     region: content
     settings:
       match_operator: CONTAINS
@@ -480,7 +566,7 @@ content:
       placeholder: ''
     third_party_settings: {  }
   url_redirects:
-    weight: 14
+    weight: 16
     region: content
     settings: {  }
     third_party_settings: {  }
