--- a/config/sync/core.entity_view_display.node.blog_post.slideshow.yml
+++ b/config/sync/core.entity_view_display.node.blog_post.slideshow.yml
@@ -6,6 +6,7 @@ dependencies:
     - core.entity_view_mode.node.slideshow
     - field.field.node.blog_post.body
     - field.field.node.blog_post.field_article_type
+    - field.field.node.blog_post.field_description
     - field.field.node.blog_post.field_list_media
     - field.field.node.blog_post.field_meta_tags
     - field.field.node.blog_post.field_section_bg_graphics
@@ -47,6 +48,7 @@ content:
     region: content
 hidden:
   field_article_type: true
+  field_description: true
   field_meta_tags: true
   field_section_bg_graphics: true
   field_section_bg_graphics_pos: true
