--- a/composer.json
+++ b/composer.json
@@ -199,7 +199,8 @@
                 "(#3080606) Reorder Layout Builder sections": "https://www.drupal.org/files/issues/2020-06-18/3080606-reorder-layout-sections-43.patch",
                 "(#2985882) Call to a member function getLabel() after enabling layout_builder": "https://www.drupal.org/files/issues/2020-04-08/2985882-field-85.patch",
                 "(#2780839) Optimize migration of specific source IDs for SQL sources": "https://www.drupal.org/files/issues/2022-04-25/2780839-9.4.x-optimize-migrate-source-filter-53.patch",
-                "(#3278959) oEmbed resource version as float throws exception": "https://www.drupal.org/files/issues/2022-08-30/media-float-version-3278959-8.patch"
+                "(#3278959) oEmbed resource version as float throws exception": "https://www.drupal.org/files/issues/2022-08-30/media-float-version-3278959-8.patch",
+                "(#3053881) Reverting entity revisions that contain custom blocks erroneously triggers EntityChangedConstraint": "https://www.drupal.org/files/issues/2022-03-22/3053881-82.patch"
             },
             "drupal/paragraphs": {
                 "(#2901390) Integrity constraint violation: 1048 Column 'langcode' cannot be null": "https://www.drupal.org/files/issues/2020-06-25/paragraphs-2901390-51.patch"
@@ -209,6 +210,9 @@
             },
             "drupal/cookiebot": {
                 "(#3091260) Blockmode 'Auto' will not work in Drupal 8 with core's domready library": "https://www.drupal.org/files/issues/2020-10-08/cookiebot-blocking-auto-mode.patch"
+            },
+            "drupal/scheduled_transitions": {
+                "(#3210877) Get node lock message...": "https://www.drupal.org/files/issues/2021-04-27/scheduled_transitions-3210877-node_lock_message-2.patch"
             }
         }
     }
