--- a/config/sync/field.field.node.blog_post.field_section_bg_graphics.yml
+++ b/config/sync/field.field.node.blog_post.field_section_bg_graphics.yml
@@ -11,8 +11,8 @@ id: node.blog_post.field_section_bg_graphics
 field_name: field_section_bg_graphics
 entity_type: node
 bundle: blog_post
-label: 'Baggrunds grafik'
-description: ''
+label: Baggrundsgrafik
+description: 'Baggrundsgrafik er figurer eller natur-motiver som fremgår på din side i højre eller venstre side af skærmen. Se flere eksempler på forsiden. Vælg Ingen.'
 required: false
 translatable: true
 default_value: {  }
