--- a/config/sync/field.field.node.blog_post.field_section_bg_graphics_pos.yml
+++ b/config/sync/field.field.node.blog_post.field_section_bg_graphics_pos.yml
@@ -11,8 +11,8 @@ id: node.blog_post.field_section_bg_graphics_pos
 field_name: field_section_bg_graphics_pos
 entity_type: node
 bundle: blog_post
-label: 'Baggrunds grafik position'
-description: 'Baggrundsgrafik er placering af ovenstående baggrundsgrafik.'
+label: 'Baggrundsgrafik position'
+description: 'Baggrundsgrafik position er placering af ovenstående baggrundsgrafik.'
 required: true
 translatable: true
 default_value:
