--- a/config/sync/core.entity_form_display.node.blog_post.default.yml
+++ b/config/sync/core.entity_form_display.node.blog_post.default.yml
@@ -6,17 +6,39 @@ dependencies:
     - field.field.node.blog_post.body
     - field.field.node.blog_post.field_article_type
     - field.field.node.blog_post.field_description
+    - field.field.node.blog_post.field_list_date
     - field.field.node.blog_post.field_list_media
     - field.field.node.blog_post.field_meta_tags
     - field.field.node.blog_post.field_section_bg_graphics
     - field.field.node.blog_post.field_section_bg_graphics_pos
     - node.type.blog_post
   module:
+    - allowed_formats
     - content_moderation
+    - datetime
+    - field_group
     - media_library
     - metatag
     - path
     - text
+third_party_settings:
+  field_group:
+    group_listevisning:
+      children:
+        - field_list_date
+        - field_list_media
+        - field_description
+      label: Listevisning
+      region: content
+      parent_name: ''
+      weight: 13
+      format_type: fieldset
+      format_settings:
+        classes: ''
+        show_empty_fields: false
+        id: ''
+        description: ''
+        required_fields: true
 id: node.blog_post.default
 targetEntityType: node
 bundle: blog_post
@@ -31,7 +53,10 @@ content:
       summary_rows: 3
       placeholder: ''
       show_summary: false
-    third_party_settings: {  }
+    third_party_settings:
+      allowed_formats:
+        hide_help: '0'
+        hide_guidelines: '0'
   created:
     type: datetime_timestamp
     weight: 3
@@ -40,22 +65,28 @@ content:
     third_party_settings: {  }
   field_description:
     type: string_textarea
-    weight: 11
+    weight: 19
     region: content
     settings:
       rows: 5
       placeholder: ''
     third_party_settings: {  }
+  field_list_date:
+    type: datetime_default
+    weight: 17
+    region: content
+    settings: {  }
+    third_party_settings: {  }
   field_list_media:
     type: media_library_widget
-    weight: 14
+    weight: 18
     region: content
     settings:
       media_types: {  }
     third_party_settings: {  }
   field_meta_tags:
     type: metatag_firehose
-    weight: 15
+    weight: 16
     region: content
     settings:
       sidebar: true
@@ -63,13 +94,13 @@ content:
     third_party_settings: {  }
   field_section_bg_graphics:
     type: options_select
-    weight: 12
+    weight: 11
     region: content
     settings: {  }
     third_party_settings: {  }
   field_section_bg_graphics_pos:
     type: options_select
-    weight: 13
+    weight: 12
     region: content
     settings: {  }
     third_party_settings: {  }
