--- a/config/sync/field.field.node.blog_post.body.yml
+++ b/config/sync/field.field.node.blog_post.body.yml
@@ -15,7 +15,7 @@ id: node.blog_post.body
 field_name: body
 entity_type: node
 bundle: blog_post
-label: Beskrivelse
+label: Blogindlæg
 description: ''
 required: false
 translatable: true
