--- a/config/sync/field.field.node.blog_post.field_description.yml
+++ b/config/sync/field.field.node.blog_post.field_description.yml
@@ -1,4 +1,4 @@
-uuid: 0ede958f-8cd5-40dc-8e64-070b1ee419c5
+uuid: fa1b2de8-5f42-423f-9401-bfb7155675cb
 langcode: da
 status: true
 dependencies:
@@ -10,7 +10,7 @@ field_name: field_description
 entity_type: node
 bundle: blog_post
 label: 'Liste beskrivelse'
-description: ''
+description: 'Bruges hvis blogindlægget bliver vist i en liste, og som et resumé i starten af blogindlægget.'
 required: false
 translatable: true
 default_value: {  }
