--- a/config/sync/field.storage.node.field_description.yml
+++ b/config/sync/field.storage.node.field_description.yml
@@ -3,7 +3,11 @@ langcode: da
 status: true
 dependencies:
   module:
+    - field_permissions
     - node
+third_party_settings:
+  field_permissions:
+    permission_type: public
 _core:
   default_config_hash: 3AS87dwrSU77oczdhjjhtLjbTP7KRQLnp3_GEpGImFc
 id: node.field_description
