--- a/config/sync/field.storage.node.field_list_date.yml
+++ b/config/sync/field.storage.node.field_list_date.yml
@@ -4,7 +4,11 @@ status: true
 dependencies:
   module:
     - datetime
+    - field_permissions
     - node
+third_party_settings:
+  field_permissions:
+    permission_type: public
 _core:
   default_config_hash: sdJb5ULPLLw96DNSHRxMxrtayCx2PfK4E2OXV-jfU2o
 id: node.field_list_date
