--- a/config/sync/editor.editor.basic_html.yml
+++ b/config/sync/editor.editor.basic_html.yml
@@ -49,7 +49,7 @@ settings:
             - Table
   plugins:
     drupallink:
-      linkit_enabled: true
+      linkit_enabled: false
       linkit_profile: default
     stylescombo:
       styles: "p.default|Normal\r\nh1|Overskrift 1\r\nh2|Overskrift 2\r\nh3|Overskrift 3\r\np.resume|Resumé"
