--- a/config/sync/node.type.article.yml
+++ b/config/sync/node.type.article.yml
@@ -13,7 +13,7 @@ _core:
 name: Artikel
 type: article
 description: 'Brug <em>artikler</em> til dine artikler, nyheder, begivenheder og lignende.'
-help: 'Her kan du dele en artikel. Er det en aktivitet, så skriv enkelt, så børn kan forstå det. Er det et undervisningsforløb, så skriv til lærere. Skriv kort og klart uanset hvad.'
+help: ''
 new_revision: true
 preview_mode: 1
 display_submitted: false
